[package]
name = "jwapp"
version = "0.1.0"
edition = "2021"



[dependencies]

chrono = { version = "0.4.22" , features = ["serde"] }
sycamore ={ version = "0.8.2" , features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
web-sys = { version = "0.3.60", features = [ "MediaQueryList", "HtmlElement", "CssStyleDeclaration", "Storage" ] }
uuid = { version = "1.2.1", features = [ "serde" , "v4", "wasm-bindgen", "js"] }

